# nao-gazebo-skin

./: README.md
gazebo_contactsensor_plugin/: CMakeLists.txt  ContactPlugin.cc  ContactPlugin.hh  package.xml
nao_skin/: CMakeLists.txt  package.xml
nao_skin/config/: rqt_ez_publisher.yaml
nao_skin/launch/: nao_skin.launch  nao_skin_highres.launch  nao_skin_lowres.launch
nao_skin/urdf/naoV40_skin_highres_generated_urdf/: naoGazebo.xacro  nao_arms.xacro  nao_head.xacro  nao_robot.xacro  nao_sensors.xacro  nao_skin.xacro  nao_torso.xacro  nao_visual_collisions.xacro
nao_skin/urdf/naoV40_skin_lowres_generated_urdf/: nao_arms.xacro  nao_skin.xacro  nao_visual_collisions.xacro
